major core update

--- a/QuestPackages/core/main/package.yml
+++ b/QuestPackages/core/main/package.yml
@@ -1,254 +1,18 @@
-variables:
-  lobby:            14;42;-406;marocraft;180;12
-  worldspawn:       0;40;0;marocraft;180;12
-  castle_exit:      13;46;-72;marocraft;0;12
-  
-  water_enter:      101;24;-431;marocraft;90;12
-  water_exit:       48;33;-72;marocraft;-45;12
-  courtyard_enter:  14;42;-124;marocraft;180;12
-  courtyard_exit:   15;40;-476;marocraft;0;12
-
-  # Functions
-  get_wahoo_loc:    1;40;12;marocraft
-  get_waha_loc:     0;40;12;marocraft
-  get_texture_pack: -1;40;12;marocraft
-  # Extra
-  get_wahoo2_loc:   22;128;-513;marocraft
-  get_waha2_loc:    24;128;-513;marocraft
-
-  exitbtn:          -3;40;12;marocraft
-
-  # Tests
-  testbtn:          -3;33;6;marocraft
-  teststar:         3;33;8;marocraft
-  testrc:           1;33;8;marocraft
-  testbtn2:         7;33;2;marocraft
-  testbtn3:         9;33;2;marocraft
-  testbtnend:       3;33;14;marocraft
-  testtexture:      0;32;2;marocraft
-
-
-npcs:
-  '156': "mario"
-
-conversations:
-  mario:
-    quester: "Mario"
-    first: mamma_mia
-
-    NPC_options:
-      wip:
-        text: "Oh sorry! This is still WIP"
-        #exit
-      mamma_mia:
-        text: "Oh mamma mia!\nDo you want to go to MaroCraft?"
-        pointer: pyes,pno
-      nothanks:
-        text: "Ba-Bye!"
-        #exit
-      tp_has_tutorial:
-        conditions: "chk_did_tutorial"
-        text: "Okidoki!"
-        events: enter_marocraft
-        #exit
-      tp_not_tutorial:
-        conditions: "!chk_did_tutorial"
-        text: "Okidoki!"
-        events: enter_marocraft_tutorial
-        #exit
-      
-    player_options:
-      pyes:
-        text: "Yes!"
-        pointer: tp_has_tutorial,tp_not_tutorial
-      pno:
-        text: "No"
-        pointer: nothanks
-
-
-
 events:
-  enter_marocraft_tutorial:     "folder init_castle,e_load_tests,tp_tutorial"
-  enter_marocraft:              "folder init_castle,tp_castle"
-
-  reset_ALL:                    "folder reset_castle,m64-bob.wipe_level,m64-wf.wipe_level,m64-bbh.wipe_level,m64-lll.wipe_level,m64-ssl.wipe_level,m64-wdw.wipe_level,m64-sslide.reset_level,m64-sslide2.reset_level2,m64-jrb.wipe_level,m64-sml.wipe_level"
-  on_exit:                      "folder reset_castle,e_tp_overworld"
-  #set_default_texture_pack:     "folder restoreTexturePack delay:2"
-
-  init_castle:                  "folder add_level_entries,add_teleports,e_obj_add_exit_dim,init_abilities,core-commands.init_commands"
-  reset_castle:                 "folder del_level_entries,del_teleports,e_obj_del_exit_dim,e_reset_tests,reset_abilities,core-commands.deit_commands,core-music.e_stop_music,e_tag_del_unlock_ss2"
-  tp_castle:                    "command warp marocastle %player%"
-  tp_tutorial:                  "command warp maroentry %player%"
-
-  e_dummy:                      "tag add dummy"
-
-  ### Init abilities
-  init_normal_abilities:        "folder core-abilities-normal-wahoo.init_wahoo,core-abilities-normal-waha.init_waha"
-  giveWahoo:                    "folder core-abilities-normal-wahoo.e_give_wahoo"
-  giveWaha:                     "folder core-abilities-normal-waha.e_give_waha"
-
-  init_abilities:               "folder init_normal_abilities,e_obj_add_new_wahoo,e_obj_add_new_waha,e_obj_add_get_texturepack"
-  e_obj_add_new_wahoo:          "objective add o_get_new_wahoo"
-  e_obj_add_new_waha:           "objective add o_get_new_waha"
-  e_obj_add_get_texturepack:    "objective add o_get_texture_pack"
-
-  deit_normal_abilities:        "folder core-abilities-normal-wahoo.deit_wahoo,core-abilities-normal-waha.deit_waha"
-  takeWahoo:                    "folder core-abilities-normal-wahoo.e_take_wahoo"
-  takeWaha:                     "folder core-abilities-normal-waha.e_take_waha"
-
-  reset_abilities:              "folder deit_normal_abilities,e_obj_del_new_wahoo,e_obj_del_new_waha,e_obj_del_get_texturepack"
-  e_obj_del_new_wahoo:          "objective remove o_get_new_wahoo"
-  e_obj_del_new_waha:           "objective remove o_get_new_waha"
-  e_obj_del_get_texturepack:    "objective remove o_get_texture_pack"
+  init_main:        "folder core-castle.init_castle,init_abilities,core-commands.init_commands"
+  deit_main:        "folder core-castle.deit_castle,deit_abilities,core-commands.deit_commands"
 
 
-  ### Add Teleports
-  add_teleports:                "folder e_obj_add_lobby_enter,e_obj_add_lobby_exit,e_obj_add_castle_water_enter,e_obj_add_castle_water_exit,e_obj_add_courtyard_enter,e_obj_add_courtyard_exit"
-  e_obj_add_lobby_enter:        "objective add o_enter_lobby"
-  e_obj_add_lobby_exit:         "objective add o_exit_lobby"
-  e_obj_add_castle_water_enter: "objective add o_enter_water"
-  e_obj_add_castle_water_exit:  "objective add o_exit_water"
-  e_obj_add_courtyard_enter:    "objective add o_enter_courtyard"
-  e_obj_add_courtyard_exit:     "objective add o_exit_courtyard"
-  ### Del Teleports
-  del_teleports:                "folder e_obj_del_lobby_enter,e_obj_del_lobby_exit,e_obj_del_castle_water_enter,e_obj_del_castle_water_exit,e_obj_del_courtyard_enter,e_obj_del_courtyard_exit"
-  e_obj_del_lobby_enter:        "objective remove o_enter_lobby"
-  e_obj_del_lobby_exit:         "objective remove o_exit_lobby"
-  e_obj_del_castle_water_enter: "objective remove o_enter_water"
-  e_obj_del_castle_water_exit:  "objective remove o_exit_water"
-  e_obj_del_courtyard_enter:    "objective remove o_enter_courtyard"
-  e_obj_del_courtyard_exit:     "objective remove o_exit_courtyard"
+  e_dummy:          "tag add dummy"
 
 
-  ### Add level entry
-  add_level_entries:            "folder e_obj_add_entry_ssl,e_obj_add_entry_bob,e_obj_add_entry_wf,e_obj_add_entry_lll,e_obj_add_entry_sslide,e_obj_add_entry_sslide2,e_obj_add_entry_bbh,e_obj_add_entry_wdw,e_obj_add_entry_jrb,e_obj_add_entry_sml"
-  e_obj_add_entry_ssl:          "objective add o_entry_ssl"
-  e_obj_add_entry_bob:          "objective add o_entry_bob"
-  e_obj_add_entry_wf:           "objective add o_entry_wf"
-  e_obj_add_entry_lll:          "objective add o_entry_lll"
-  e_obj_add_entry_sslide:       "objective add o_entry_sslide"
-  e_obj_add_entry_sslide2:      "objective add o_entry_sslide2"
-  e_obj_add_entry_bbh:          "objective add o_entry_bbh"
-  e_obj_add_entry_wdw:          "objective add o_entry_wdw"
-  e_obj_add_entry_jrb:          "objective add o_entry_jrb"
-  e_obj_add_entry_sml:          "objective add o_entry_sml"
-  ### Del level entry
-  del_level_entries:            "folder e_obj_del_entry_ssl,e_obj_del_entry_bob,e_obj_del_entry_wf,e_obj_del_entry_lll,e_obj_del_entry_sslide,e_obj_del_entry_sslide2,e_obj_del_entry_bbh,e_obj_del_entry_wdw,e_obj_del_entry_jrb,e_obj_del_entry_sml"
-  e_obj_del_entry_ssl:          "objective remove o_entry_ssl"
-  e_obj_del_entry_bob:          "objective remove o_entry_bob"
-  e_obj_del_entry_wf:           "objective remove o_entry_wf"
-  e_obj_del_entry_lll:          "objective remove o_entry_lll"
-  e_obj_del_entry_sslide:       "objective remove o_entry_sslide"
-  e_obj_del_entry_sslide2:      "objective remove o_entry_sslide2"
-  e_obj_del_entry_bbh:          "objective remove o_entry_bbh"
-  e_obj_del_entry_wdw:          "objective remove o_entry_wdw"
-  e_obj_del_entry_jrb:          "objective remove o_entry_jrb"
-  e_obj_del_entry_sml:          "objective remove o_entry_sml"
 
-  # Add level exit
-  e_obj_add_exit_dim:           "objective add o_exitdim"
-  e_obj_del_exit_dim:           "objective remove o_exitdim"
-
-  # Teleports
-  e_tp_overworld:               "command warp spawn %player%"
-  e_tp_lobby:                   "teleport $lobby$"
-  e_tp_castle_main:             "teleport $castle_exit$"
-  e_tp_castle_water_enter:      "teleport $water_enter$"
-  e_tp_castle_water_exit:       "teleport $water_exit$"
-  e_tp_courtyard_enter:         "teleport $courtyard_enter$"
-  e_tp_courtyard_exit:          "teleport $courtyard_exit$"
-
-  # Texture pack
-  getTexturePack:               "opsudo usepack marocraftpack"
-  #restoreTexturePack:           "opsudo usepack kraftrinepack"
-
+  # [tmp] Secret slide 2 unlock
   e_unlock_ss2:                 "if !chk_ss2_unlocked e_fol_unlock_ss2 else e_dummy"
   e_fol_unlock_ss2:             "folder e_tag_add_unlock_ss2,e_notify_unlock_ss2"
   e_notify_unlock_ss2:          "notify Secret Slide #2 has now been unlocked!"
   e_tag_add_unlock_ss2:         "tag add ss2_unlock"
   e_tag_del_unlock_ss2:         "tag delete ss2_unlock"
 
-
-  ### TESTS
-  e_load_tests:                 "folder e_obj_add_test_btn,e_obj_add_test_texture,e_obj_add_test_star,e_obj_add_test_rc,e_obj_add_get_wahoo,e_obj_add_get_waha,e_obj_add_end_test_btn"
-  e_obj_add_test_btn:           "objective add o_testbtn"
-  e_obj_add_test_texture:       "objective add o_testtexture"
-  e_obj_add_test_star:          "objective add o_teststar"
-  e_obj_add_test_rc:            "objective add o_testrc"
-  e_obj_add_get_wahoo:          "objective add o_get_wahoo"
-  e_obj_add_get_waha:           "objective add o_get_waha"
-  e_obj_add_end_test_btn:       "objective add o_testbtn_end"
-  # test btn 1
-  e_tb_1:                       "folder e_tb_1_notify"
-  e_tb_1_notify:                "notify &2Hey, it works!"
-  # test star 1
-  e_ts_1:                       "folder e_ts_1_notify,core-sfx.e_got_star"
-  e_ts_1_notify:                "notify &3Test star\n&2Cleared! io:title"
-  # test red coin 1
-  e_trc_1:                      "folder e_trc_1_notify,core-sfx.e_coin"
-  e_trc_1_notify:               "notify &3Red coin found!"
-  # get wahoo
-  e_tb_2:                       "folder giveWahoo"
-  # get waha
-  e_tb_3:                       "folder giveWaha"
-  # test btn end
-  e_tb_end:                     "folder e_notif_end_tut,core-sfx.e_star_spawn,e_tb_end2"
-  e_notif_end_tut:              "notify &3Welcome to SM(aske) 64\n<3 io:title"
-  e_tb_end2:                    "folder e_tb_end_kp,e_tag_add_did_tutorial,e_reset_tests delay:3"
-  e_tag_add_did_tutorial:       "tag add did_tutorial"
-  e_tb_end_kp:                  "kill"
-
-
-  e_reset_tests:                "folder e_obj_del_test_btn,e_obj_del_test_texture,e_obj_del_test_star,e_obj_del_test_rc,e_obj_del_get_wahoo,e_obj_del_get_waha,e_obj_del_end_test_btn"
-  e_obj_del_test_btn:           "objective remove o_testbtn"
-  e_obj_del_test_texture:       "objective remove o_testtexture"
-  e_obj_del_test_star:          "objective remove o_teststar"
-  e_obj_del_test_rc:            "objective remove o_testrc"
-  e_obj_del_get_wahoo:          "objective remove o_get_wahoo"
-  e_obj_del_get_waha:           "objective remove o_get_waha"
-  e_obj_del_end_test_btn:       "objective remove o_testbtn_end"
-
-
 conditions:
-  chk_did_tutorial:             "tag did_tutorial"
   chk_ss2_unlocked:             "tag ss2_unlock"
-
-
-objectives:
-  # Exit
-  o_exitdim:                    "action right any loc:$exitbtn$ events:on_exit"
-
-  # Tests
-  o_testbtn:                    "action right any loc:$testbtn$ events:e_tb_1 persistent"
-  o_testtexture:                "action right any loc:$testtexture$ events:getTexturePack persistent"
-  o_teststar:                   "action right any loc:$teststar$ events:e_ts_1"
-  o_testrc:                     "action right any loc:$testrc$ events:e_trc_1"
-  o_get_wahoo:                  "action right any loc:$testbtn2$ events:e_tb_2"
-  o_get_waha:                   "action right any loc:$testbtn3$ events:e_tb_3"
-  o_testbtn_end:                "action right any loc:$testbtnend$ events:e_tb_end"
-
-  # Utility
-  o_get_new_wahoo:              "action right any loc:$get_wahoo_loc$ events:giveWahoo persistent"
-  o_get_new_waha:               "action right any loc:$get_waha_loc$ events:giveWaha persistent"
-  o_get_texture_pack:           "action right any loc:$get_texture_pack$ events:getTexturePack persistent"
-
-  # Castle
-  o_enter_lobby:                "region lobby_enter enter events:e_tp_lobby persistent"
-  o_exit_lobby:                 "region lobby_exit enter events:e_tp_castle_main persistent"
-  o_enter_water:                "region castle_water_enter events:e_tp_castle_water_enter persistent"
-  o_exit_water:                 "region castle_water_exit events:e_tp_castle_water_exit persistent"
-  o_enter_courtyard:            "region courtyard_enter events:e_tp_courtyard_enter persistent"
-  o_exit_courtyard:             "region courtyard_exit events:e_tp_courtyard_exit persistent"
-
-  o_entry_ssl:                  "region ssl_entry enter events:m64-ssl.init_level"
-  o_entry_bob:                  "region bob_entry enter events:m64-bob.init_level"
-  o_entry_wf:                   "region wf_entry enter events:m64-wf.init_level"
-  o_entry_lll:                  "region lll_entry enter events:m64-lll.init_level"
-  o_entry_sslide:               "region sslide_entry enter events:m64-sslide.init_level"
-  o_entry_sslide2:              "region sslide2_entry enter conditions:chk_ss2_unlocked events:m64-sslide2.init_level2"
-  o_entry_bbh:                  "region bbh_entry enter events:m64-bbh.init_level"
-  o_entry_wdw:                  "region wdw_entry enter events:m64-wdw.init_level"
-  o_entry_jrb:                  "region jrb_entry enter events:m64-jrb.init_level"
-  o_entry_sml:                  "region sml_entry enter events:m64-sml.init_level"
-  
-
