--- a/QuestPackages/m64/jrb/package.yml
+++ b/QuestPackages/m64/jrb/package.yml
@@ -24,7 +24,7 @@ events:
   init_level:           "folder init_spawns,init_cannons,init_cmet,init_switches,init_dripst,init_stars,e_play_music"
   deit_level:           "folder deit_spawns,deit_cannons,deit_cmet,deit_switches,deit_dripst,deit_stars,e_stop_music,e_efx_clear"
   unlo_level:           "folder exit_level" # period:20 ticks
-  exit_level:           "folder deit_level,e_tp_respawn,core-main.init_castle"
+  exit_level:           "folder deit_level,e_tp_respawn,core-main.init_main"
 
   on_death:             "folder e_notify_death,unlo_level,e_point_add_death,e_gpoint_add_death"
   on_exit:              "folder unlo_level"
