--- a/QuestPackages/m64/wf/package.yml
+++ b/QuestPackages/m64/wf/package.yml
@@ -17,7 +17,7 @@ events:
   init_level:         "folder init_spawns,init_cannons,init_bridges,init_kz,init_stars,e_play_music,init_fakes"
   deit_level:         "folder deit_spawns,deit_cannons,deit_bridges,deit_kz,deit_stars,e_stop_music"
   unlo_level:         "folder deit_fakes,exit_level" # period:20 ticks
-  exit_level:         "folder deit_level,e_tp_respawn,core-main.init_castle"
+  exit_level:         "folder deit_level,e_tp_respawn,core-main.init_main"
 
   on_death:           "folder e_notify_death,exit_level,e_point_add_death,e_gpoint_add_death"
   on_exit:            "folder unlo_level"
