--- a/QuestPackages/m64/bbh/package.yml
+++ b/QuestPackages/m64/bbh/package.yml
@@ -19,7 +19,7 @@ events:
   init_level:           "folder init_spawns,init_zones,init_bridges,init_falltp,init_cinv,init_trapdoor,init_stars,e_play_music,init_fakes,init_intro"
   deit_level:           "folder deit_spawns,deit_zones,deit_bridges,deit_falltp,deit_cinv,deit_trapdoor,deit_stars,e_stop_music"
   unlo_level:           "folder deit_fakes,exit_level period:20 ticks"
-  exit_level:           "folder deit_level,e_tp_respawn,core-main.init_castle"
+  exit_level:           "folder deit_level,e_tp_respawn,core-main.init_main"
 
   on_death:             "folder e_notify_death,exit_level,e_point_add_death,e_gpoint_add_death"
   on_exit:              "folder unlo_level"
