--- a/QuestPackages/core/main/abilityman.yml
+++ b/QuestPackages/core/main/abilityman.yml
@@ -9,12 +9,12 @@ events:
 
   ### --- Cleanup ----------------------------------
   e_cleanup_ab_all:       "folder e_deit_ab_all,e_take_ab_all"
-  e_deit_ab_all:          "folder deit_ability_normal"
-  e_take_ab_all:          "folder e_take_ab_normal"
+  e_deit_ab_all:          "folder deit_ability_normal,deit_ability_chance"
+  e_take_ab_all:          "folder e_take_ab_normal,e_take_ab_chance"
 
   ### --- Init -------------------------------------
-  e_obj_add_ab:           "objective add o_get_ab_norm"
-  e_obj_del_ab:           "objective remove o_get_ab_norm"
+  e_obj_add_ab:           "objective add o_get_ab_normal,o_get_ab_chance"
+  e_obj_del_ab:           "objective remove o_get_ab_normal,o_get_ab_chance"
 
 
   ### --- Normal -----------------------------------
@@ -26,7 +26,17 @@ events:
   init_ability_normal:    "folder core-abilities-normal-wahoo.init_wahoo,core-abilities-normal-waha.init_waha"
   deit_ability_normal:    "folder core-abilities-normal-wahoo.deit_wahoo,core-abilities-normal-waha.deit_waha"
 
+  ### --- Chance -----------------------------------
+  e_setup_ab_chance:      "folder e_cleanup_ab_all,init_ability_chance,e_give_ab_chance"
+
+  e_give_ab_chance:       "folder core-abilities-chance-wahoo.e_give_wahoo,core-abilities-chance-waha.e_give_waha"
+  e_take_ab_chance:       "folder core-abilities-chance-wahoo.e_take_wahoo,core-abilities-chance-waha.e_take_waha"
+
+  init_ability_chance:    "folder core-abilities-chance-wahoo.init_wahoo,core-abilities-chance-waha.init_waha"
+  deit_ability_chance:    "folder core-abilities-chance-wahoo.deit_wahoo,core-abilities-chance-waha.deit_waha"
+
 
 
 objectives:
-  o_get_ab_norm:          "action right any loc:$get_ability_normal$ events:e_setup_ab_normal persistent"
+  o_get_ab_normal:        "action right any loc:$get_ability_normal$ events:e_setup_ab_normal persistent"
+  o_get_ab_chance:        "action right any loc:$get_ability_chance$ events:e_setup_ab_chance persistent"
